--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 11:05:09 2018</p>
+         Last Run: Sun Jul 15 12:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -29,26 +29,14 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>0</td>
-                        <td>34</td>
-                        <td>6</td>
-                        <td>10</td>
-                        <td>ENE</td>
-                        <td>47</td>
-                     </tr>
-                     <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>23</td>
                         <td>5</td>
-                        <td>10</td>
+                        <td>6</td>
                         <td>E</td>
                         <td>59</td>
                      </tr>
@@ -83,7 +71,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM"
            ],
            "datasets":[
@@ -93,8 +80,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
-                 "23"
+                 "24"
                ]
              },
              {
@@ -103,8 +89,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
-                 "23"
+                 "24"
                ]
              }
            ]
@@ -145,7 +130,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM"
            ],
            "datasets":[
@@ -154,7 +138,6 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
                  "0"
                ]
              },
@@ -163,8 +146,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
-                 "29"
+                 "23"
                ]
              },
              {
@@ -172,7 +154,6 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
                  "59"
                ]
              }
@@ -191,7 +172,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 11:05:09 2018</p>
+         Last Run: Sun Jul 15 12:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -213,8 +194,8 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>30</td>
-                        <td>30</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>21</td>
                         <td>2</td>
@@ -230,7 +211,7 @@
                         <td>0</td>
                         <td>23</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -288,7 +269,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "30",
+                 "29",
                  "29",
                  "27"
                ]
@@ -299,7 +280,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "30",
+                 "29",
                  "29",
                  "27"
                ]
@@ -391,7 +372,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 11:05:09 2018</p>
+         Last Run: Sun Jul 15 12:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -416,11 +397,11 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>35</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -428,19 +409,19 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>38</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>E</td>
-                        <td>42</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>4</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -490,7 +471,7 @@
                "data":[
                  "28",
                  "27",
-                 "24"
+                 "25"
                ]
              },
              {
@@ -501,7 +482,7 @@
                "data":[
                  "28",
                  "27",
-                 "24"
+                 "25"
                ]
              }
            ]
@@ -562,9 +543,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "32",
-                 "36",
-                 "45"
+                 "33",
+                 "38",
+                 "46"
                ]
              },
              {
@@ -572,8 +553,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "35",
-                 "42",
+                 "34",
+                 "41",
                  "45"
                ]
              }
@@ -591,7 +572,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 11:05:09 2018</p>
+         Last Run: Sun Jul 15 12:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -615,8 +596,8 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>6</td>
-                        <td>39</td>
+                        <td>4</td>
+                        <td>38</td>
                         <td>3</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -625,36 +606,36 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>22</td>
-                        <td>40</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>20</td>
+                        <td>39</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>42</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>39</td>
-                        <td>43</td>
+                        <td>38</td>
+                        <td>42</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>4</td>
-                        <td>49</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>3</td>
+                        <td>48</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>E</td>
                         <td>53</td>
                      </tr>
@@ -702,9 +683,9 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "25",
+                 "25",
                  "24",
-                 "24",
-                 "22"
+                 "23"
                ]
              },
              {
@@ -714,9 +695,9 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "25",
+                 "25",
                  "24",
-                 "24",
-                 "22"
+                 "23"
                ]
              }
            ]
@@ -768,10 +749,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "22",
-                 "39",
-                 "4"
+                 "4",
+                 "20",
+                 "38",
+                 "3"
                ]
              },
              {
@@ -779,10 +760,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "38",
                  "39",
-                 "40",
-                 "43",
-                 "49"
+                 "42",
+                 "48"
                ]
              },
              {
@@ -791,8 +772,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "35",
-                 "42",
-                 "60",
+                 "41",
+                 "59",
                  "53"
                ]
              }
@@ -810,7 +791,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 11:05:09 2018</p>
+         Last Run: Sun Jul 15 12:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -832,26 +813,26 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
                         <td>57</td>
                         <td>3</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>20</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>0</td>
+                        <td>2</td>
                         <td>50</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>NW</td>
-                        <td>20</td>
+                        <td>NNW</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -859,11 +840,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>3</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>19</td>
+                        <td>NNE</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -874,7 +855,7 @@
                         <td>40</td>
                         <td>7</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>ESE</td>
                         <td>18</td>
                      </tr>
                      <tr>
@@ -883,7 +864,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>4</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>7</td>
                         <td>8</td>
                         <td>SE</td>
@@ -933,7 +914,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
+                 "18",
                  "19",
                  "20",
                  "21",
@@ -946,7 +927,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
+                 "18",
                  "19",
                  "20",
                  "21",
@@ -1004,7 +985,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
+                 "2",
                  "3",
                  "3",
                  "4"
@@ -1017,9 +998,9 @@
                "data":[
                  "57",
                  "50",
-                 "43",
+                 "44",
                  "40",
-                 "38"
+                 "39"
                ]
              },
              {
@@ -1027,9 +1008,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
-                 "20",
-                 "19",
+                 "17",
+                 "18",
+                 "18",
                  "18",
                  "18"
                ]
