--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 13:05:09 2018</p>
+         Last Run: Sun Jul 15 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>21</td>
+                        <td>22</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
@@ -46,9 +46,9 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>24</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -58,7 +58,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SE</td>
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "21",
-                 "23",
-                 "28"
+                 "22",
+                 "24",
+                 "29"
                ]
              },
              {
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 13:05:09 2018</p>
+         Last Run: Sun Jul 15 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -236,9 +236,9 @@
                         <td>0</td>
                         <td>34</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>48</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -248,20 +248,20 @@
                         <td>0</td>
                         <td>39</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>5</td>
-                        <td>45</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>3</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>ESE</td>
+                        <td>E</td>
                         <td>53</td>
                      </tr>
                   </tbody>
@@ -308,7 +308,7 @@
                "data":[
                  "28",
                  "27",
-                 "25"
+                 "24"
                ]
              },
              {
@@ -319,7 +319,7 @@
                "data":[
                  "28",
                  "27",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -372,7 +372,7 @@
                "data":[
                  "0",
                  "0",
-                 "5"
+                 "3"
                ]
              },
              {
@@ -382,7 +382,7 @@
                "data":[
                  "34",
                  "39",
-                 "45"
+                 "48"
                ]
              },
              {
@@ -390,8 +390,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
-                 "54",
+                 "47",
+                 "53",
                  "53"
                ]
              }
@@ -409,7 +409,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 13:05:09 2018</p>
+         Last Run: Sun Jul 15 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -433,20 +433,20 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>2</td>
-                        <td>38</td>
+                        <td>4</td>
+                        <td>41</td>
                         <td>3</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>58</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>8</td>
-                        <td>39</td>
+                        <td>42</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
@@ -457,24 +457,24 @@
                         <td>Mostly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>8</td>
-                        <td>42</td>
+                        <td>9</td>
+                        <td>44</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>61</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>3</td>
-                        <td>47</td>
+                        <td>5</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "25",
-                 "25",
+                 "24",
                  "24",
                  "23"
                ]
@@ -532,7 +532,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "25",
-                 "25",
+                 "24",
                  "24",
                  "23"
                ]
@@ -586,10 +586,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "4",
                  "8",
-                 "8",
-                 "3"
+                 "9",
+                 "5"
                ]
              },
              {
@@ -597,10 +597,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
-                 "39",
+                 "41",
                  "42",
-                 "47"
+                 "44",
+                 "48"
                ]
              },
              {
@@ -608,10 +608,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
+                 "59",
                  "62",
-                 "61",
-                 "53"
+                 "62",
+                 "54"
                ]
              }
            ]
@@ -628,7 +628,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 13:05:09 2018</p>
+         Last Run: Sun Jul 15 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -649,63 +649,63 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>Partly Cloudy</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>52</td>
                         <td>3</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>17</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>46</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>18</td>
+                        <td>NW</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
                         <td>3</td>
-                        <td>44</td>
+                        <td>42</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>NNE</td>
-                        <td>18</td>
+                        <td>N</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>3</td>
                         <td>40</td>
                         <td>7</td>
                         <td>8</td>
-                        <td>E</td>
-                        <td>18</td>
+                        <td>N</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
                         <td>4</td>
                         <td>39</td>
                         <td>7</td>
-                        <td>6</td>
-                        <td>ESE</td>
-                        <td>18</td>
+                        <td>8</td>
+                        <td>NE</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -751,7 +751,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "18",
+                 "17",
                  "19",
                  "20",
                  "21",
@@ -764,7 +764,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "18",
+                 "17",
                  "19",
                  "20",
                  "21",
@@ -833,9 +833,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "50",
-                 "44",
+                 "52",
+                 "46",
+                 "42",
                  "40",
                  "39"
                ]
@@ -845,11 +845,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
-                 "18",
-                 "18",
-                 "18",
-                 "18"
+                 "30",
+                 "36",
+                 "40",
+                 "41",
+                 "41"
                ]
              }
            ]
